# swift

./: .cdtproject  .clang-format  .clang-tidy  .coafile  .cproject  .gitignore  .gitmodules  .project  .project.vimrc  .scons2ninja.conf  .vimrc  COPYING  COPYING.dependencies  COPYING.gpl  COPYING.thirdparty  DEVELOPMENT.md  Makefile  Makefile.config.in  README  README.git  README.md  README.txt  SConstruct  configure.in  scons  scons.bat
.circleci/: config.yml
.subl/: swift.sublime-project
Backport/: memory
BuildTools/: CheckHeaders.py  CheckTabs.py  CheckTests.py  CheckTranslations.py  Copyrighter.py  Cppcheck.sh  DebianizeVersion.py  FilterScanBuildResults.py  FixIncludes.py  GenerateAppCastFeeds.py  GetBuildVersion.py  InstallSwiftDependencies.sh  PackageSwiften.sh  ProjectCopyrightSummary.py  TestVersioningScheme.sh  TranslationCoverage.xslt  UpdateDebianChangelog.py  package_debian.sh  scons2ninja.py  scons2ninja.rb
BuildTools/CLang/: .gitignore  CLangDiagnosticsFlagsTool.cpp  SConscript
BuildTools/Copyright/: find-contribs.py
BuildTools/Coverage/: FilterLCovData.py  GenerateCoverageResults.sh  GenerateOverview.py  GenerateSummary.py
BuildTools/CrashReportAnalysis/: WindowsMinidumpAnalyse.py
BuildTools/Eclipse/: CodeTemplates.xml  Swift (Mac OS X).launch  Swift (Windows Debug).launch  Swift (Windows).launch
BuildTools/EmojisGenerator/: EmojiMapper.cpp  generate.js
BuildTools/Gource/: .gitignore  CreateVideo.sh  GetGravatars.py  RunGource.sh
BuildTools/MSVS/: .gitignore  GenerateProjects.py  Swift.sln
BuildTools/SCons/: SConscript.boot  SConstruct  Version.py
DocBook/SCons/: DocBook.py  XSLT.py
Documentation/: BuildingGenerics.txt  BuildingOnAndroid.txt  BuildingOnIOS.txt  BuildingOnUnix.txt  BuildingOnWindows.txt  SConscript  TranslatingSwift.txt
Documentation/API/: Doxyfile  SConscript
Documentation/Licenses/: BSD-simplified.txt
Documentation/SwiftAPI/: Doxyfile
Documentation/SwiftUserGuide/: .gitignore  SConscript  Swift Users Guide.xml
Documentation/SwiftenDevelopersGuide/: SConscript  Swiften Developers Guide.xml  SwiftenDevelopersGuide.xml  documentation.css
Limber/: .gitignore  MIXMockServer.cpp  Makefile.inc  SConscript  main.cpp
Limber/Server/: ServerFromClientSession.cpp  ServerFromClientSession.h  ServerSession.cpp  ServerSession.h  ServerStanzaRouter.cpp  ServerStanzaRouter.h  SimpleUserRegistry.cpp  SimpleUserRegistry.h  UserRegistry.cpp  UserRegistry.h
Nim/: Makefile.inc  main.cpp
Nim/Cocoa/: Menulet.h  Menulet.m
QA/: Makefile.inc  SConscript  valgrind.supp
QA/Checker/: CppUnitTestResultPrinter.cpp  CppUnitTestResultPrinter.h  IO.cpp  IO.h  SConscript  checker.cpp
QA/CrossDistributionTest/: VagrantCrossDistributionTest.py  playbook.yml
QA/Swiften/: SConscript
QA/UnitTest/: .gitignore  Makefile.inc  SConscript  Unit Tests.launch
Slimber/: .gitignore  FileVCardCollection.cpp  FileVCardCollection.h  LinkLocalPresenceManager.cpp  LinkLocalPresenceManager.h  MainController.cpp  MainController.h  Makefile.inc  Menulet.cpp  Menulet.h  MenuletController.cpp  MenuletController.h  SConscript  Server.cpp  Server.h  ServerError.h  VCardCollection.cpp  VCardCollection.h  main.cpp
Slimber/CLI/: DummyMenulet.cpp  DummyMenulet.h  Makefile.inc  SConscript  main.cpp
Slimber/Cocoa/: .gitignore  CocoaAction.h  CocoaAction.mm  CocoaController.h  CocoaController.mm  CocoaMenulet.h  CocoaMenulet.mm  CocoaMenuletDelegate.h  CocoaMenuletDelegate.mm  Info.plist  MainController.h  MainController.mm  MainMenu.xib  Makefile.inc  Menulet.h  Menulet.m  PkgInfo  SConscript  Slimber.h  Slimber.mm  Slimber_Prefix.pch  main.h  main.mm
Slimber/Qt/: QtAboutDialog.cpp  QtAboutDialog.h  QtMenulet.cpp  QtMenulet.h  SConscript  Slimber.pro  Slimber.qrc  main.cpp
Slimber/Resources/: Credits.html  Slimber.icns
Slimber/UnitTest/: LinkLocalPresenceManagerTest.cpp  Makefile.inc  MenuletControllerTest.cpp
Sluift/: .gitignore  ClientHelpers.cpp  ClientHelpers.h  Completer.cpp  Completer.h  Console.cpp  Console.h  EditlineTerminal.cpp  EditlineTerminal.h  GenerateDocumentation.lua  GenericLuaElementConvertor.h  Helpers.cpp  Helpers.h  ITunesInterface.h  ITunesInterface.mm  LuaElementConvertor.cpp  LuaElementConvertor.h  LuaElementConvertors.cpp  LuaElementConvertors.h  README  README.md  Response.cpp  Response.h  ResponseSink.h  SConscript  SConscript.variant  SluiftClient.cpp  SluiftClient.h  SluiftComponent.cpp  SluiftComponent.h  SluiftException.h  SluiftGlobals.h  StandardTerminal.cpp  StandardTerminal.h  Terminal.cpp  Terminal.h  Watchdog.cpp  Watchdog.h  boot.lua  client.cpp  (+13 more)
Sluift/ElementConvertors/: BodyConvertor.cpp  BodyConvertor.h  CarbonsReceivedConvertor.cpp  CarbonsReceivedConvertor.h  CarbonsSentConvertor.cpp  CarbonsSentConvertor.h  CommandConvertor.cpp  CommandConvertor.h  DOMElementConvertor.cpp  DOMElementConvertor.h  DefaultElementConvertor.cpp  DefaultElementConvertor.h  DelayConvertor.cpp  DelayConvertor.h  DiscoInfoConvertor.cpp  DiscoInfoConvertor.h  DiscoItemsConvertor.cpp  DiscoItemsConvertor.h  ElementConvertors.ipp  FormConvertor.cpp  FormConvertor.h  ForwardedConvertor.cpp  ForwardedConvertor.h  IQConvertor.cpp  IQConvertor.h  IsodeIQDelegationConvertor.cpp  (+109 more)
SwifTools/: CrashReporter.cpp  CrashReporter.h  EmojiMapper.cpp  EmojiMapper.h  HunspellChecker.cpp  HunspellChecker.h  LastLineTracker.cpp  LastLineTracker.h  Linkify.cpp  Linkify.h  MacOSXChecker.h  MacOSXChecker.mm  SConscript  SpellChecker.h  SpellCheckerFactory.cpp  SpellCheckerFactory.h  SpellParser.cpp  SpellParser.h  TabComplete.cpp  TabComplete.h
Swift/: ChangeLog.md  Makefile.inc  SConscript
Swiften/: .gitignore  ChangeLog.md  Makefile.inc  SConscript  Swift.pri  Swiften.rc
Swiftob/: .gitignore  Commands.cpp  Commands.h  LuaCommands.cpp  LuaCommands.h  MUCs.cpp  MUCs.h  SConscript  Storage.cpp  Storage.h  Swiftob.cpp  Swiftob.h  Users.cpp  Users.h  linit.c  main.cpp
autoconf/: autogen.sh  ax_avahi.m4  ax_lib_expat.m4  ax_libxml2.m4  ax_openssl.m4  ax_qt.m4  cccl
doc/: BuildingOnWindows.txt
tools/: Copyrighter.py  ThemeQRC.py  qmakeish.py
(+3489 files in other folders)
